--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,10 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   provider: ^6.0.1
+  json_serializable: ^5.0.2
+  build_runner: ^2.1.2
+  json_annotation: ^4.1.0
+  http: ^0.13.3
 
 dev_dependencies:
   flutter_test:
