Add: Message Send

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   build_runner: ^2.1.2
   json_annotation: ^4.1.0
   http: ^0.13.3
+  fluttertoast: ^8.0.8
 
 dev_dependencies:
   flutter_test:
